--- a/.env.loc
+++ b/.env.loc
@@ -31,3 +31,5 @@ APP_SECRET=26926857b8d616f511d8ac0dede87802
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:@171.255.255.4:3306/test_mchs?serverVersion=8
 ###< doctrine/doctrine-bundle ###
+
+RBC_URL=http://www.cbr.ru/scripts/XML_daily.asp
