--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "guzzlehttp/guzzle": "~6.0",
-        "illuminate/support": "^7.0",
         "knplabs/knp-paginator-bundle": "^5.1",
+        "nesbot/carbon": "^2.31",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "5.0.*",
         "symfony/console": "5.0.*",
